@@ -194,6 +194,18 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/gphotoframe/filter/min_file_size</key>
+      <applyto>/apps/gphotoframe/filter/min_file_size</applyto>
+      <owner>gphotoframe</owner>
+      <type>int</type>
+      <default>0</default>
+      <locale name="C">
+        <short>Minimum image file size in bytes</short>
+        <long>Minimum image file size in bytes.  When this value is less than 0, image file size filter is disabled.</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/gphotoframe/plugins/flickr/interval</key>
       <applyto>/apps/gphotoframe/plugins/flickr/interval</applyto>
       <owner>gphotoframe</owner>
